--- a/app/src/main/res/layout/activity_reservation_address.xml
+++ b/app/src/main/res/layout/activity_reservation_address.xml
@@ -52,7 +52,7 @@
             android:layout_height="24dp"
             android:layout_marginEnd="12dp"
             android:contentDescription="@string/address_search_cancel_icon_desc"
-            app:srcCompat="@drawable/rounded"
+            android:src="@drawable/close"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnSearchAddress"
             app:layout_constraintBottom_toBottomOf="parent" />
@@ -63,7 +63,7 @@
             android:layout_height="24dp"
             android:layout_marginEnd="40dp"
             android:contentDescription="@string/address_search_icon_desc"
-            app:srcCompat="@drawable/search_icon"
+            app:srcCompat="@drawable/search"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
@@ -73,7 +73,7 @@
     <View
         android:id="@+id/search_address_divider"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="2dp"
         android:background="#ff4d4d"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
