--- a/app/src/main/res/layout/activity_reservation_calendar.xml
+++ b/app/src/main/res/layout/activity_reservation_calendar.xml
@@ -18,12 +18,14 @@
     <!-- TODO - 디자인 문서대로 작업 필요 -->
     <CalendarView
         android:id="@+id/calendarView"
+        android:theme="@style/CalendarViewTheme"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="13dp"
         android:layout_marginEnd="32dp"
         android:textSize="14.5sp"
+        android:weekNumberColor="@style/CalenderViewWeekCustomText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include"
         app:layout_constraintEnd_toEndOf="parent"
