--- a/app/src/main/res/layout/list_item_charge.xml
+++ b/app/src/main/res/layout/list_item_charge.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/charge_item_layout"
     android:layout_width="match_parent"
-    android:layout_height="29dp"
+    android:layout_height="wrap_content"
     android:background="#ffffff"
     android:orientation="horizontal">
 
