--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,4 +54,13 @@
         <item name="android:windowIsFloating">true</item>
         <item name="android:backgroundDimEnabled">true</item>
     </style>
+
+    <style name="CalendarViewTheme" parent="AppTheme">
+        <item name="colorAccent">#ff4d4d</item>
+        <item name="android:fontFamily">@font/nanumsquarebold</item>
+    </style>
+
+    <style name="CalenderViewWeekCustomText" parent="android:TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">#ff4d4d</item>
+    </style>
 </resources>
