1. 스팀세차 지도화면에서 홈버튼, 현재위치 버튼 크기 수정. (4/27 수정) 2. 세차주 목록 화면에서 사진 위 간격 및 세차가능지역 앞 간격 수정. (4/27 수정) 3. 차량 등록 시, 오른쪽 화살표 버튼 수정. 텍스트 위치 왼쪽정렬 수정. (4/27 수정) 4. 제조사 모델 선택시, 배경 투명도 60%. 글씨및 배경 컬러 변경. (4/27 수정) 5. 이용내역 없을 경우 나타나는 이미지 변경. (4/27 수정) 6. 예약내역 간격 (시간과 장소 사이, 대리점 전화걸기 사이) 수정. (4/27 수정)

--- a/app/src/main/res/layout/activity_car_register.xml
+++ b/app/src/main/res/layout/activity_car_register.xml
@@ -79,10 +79,11 @@
                 android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="296dp"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical|center_horizontal"
+                android:paddingLeft="55dp"
+                android:gravity="left|center_vertical|center_horizontal"
                 android:background="@null"
                 android:ems="10"
-                android:hint="제조사를 선택 하세요"
+                android:hint="제조사"
                 android:textColor="#3E3E3E"
                 android:textSize="15sp"/>
 
@@ -95,7 +96,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:background="@color/customColorPrimary1"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark"
-                app:srcCompat="@drawable/chevron_left_24_px" />
+                android:src="@drawable/arrow_right_red" />
         </LinearLayout>
 
 
@@ -122,10 +123,11 @@
                 android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="296dp"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical|center_horizontal"
+                android:paddingLeft="55dp"
+                android:gravity="left|center_vertical|center_horizontal"
                 android:background="@null"
                 android:ems="10"
-                android:hint="차종을 선택 하세요"
+                android:hint="모델명"
                 android:textColor="#3E3E3E"
                 android:textSize="15sp"/>
 
@@ -139,7 +141,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:background="@color/customColorPrimary1"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark"
-                app:srcCompat="@drawable/chevron_left_24_px" />
+                android:src="@drawable/arrow_right_red" />
         </LinearLayout>
 
         <LinearLayout
@@ -164,7 +166,8 @@
                 android:layout_width="match_parent"
                 android:fontFamily="@font/nanumsquareregular"
                 android:layout_height="20dp"
-                android:gravity="center|center_vertical|center_horizontal"
+                android:layout_marginLeft="20dp"
+                android:gravity="left|center_vertical|center_horizontal"
                 android:background="@null"
                 android:ems="10"
                 android:hint="차량 번호"
