--- a/app/src/main/res/layout/activity_reservation_address.xml
+++ b/app/src/main/res/layout/activity_reservation_address.xml
@@ -50,7 +50,10 @@
             android:id="@+id/btnSearchCancel"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:layout_marginEnd="12dp"
+            android:layout_gravity="center|center_horizontal|center_vertical"
             android:contentDescription="@string/address_search_cancel_icon_desc"
             android:src="@drawable/close"
             app:layout_constraintTop_toTopOf="parent"
@@ -61,7 +64,10 @@
             android:id="@+id/btnSearchAddress"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:layout_marginEnd="40dp"
+            android:layout_gravity="center|center_horizontal|center_vertical"
             android:contentDescription="@string/address_search_icon_desc"
             app:srcCompat="@drawable/search"
             app:layout_constraintTop_toTopOf="parent"
