--- a/app/src/main/res/drawable/layout_background_2.xml
+++ b/app/src/main/res/drawable/layout_background_2.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FFFFFF" />
-    <stroke android:color="#CCCCCC" android:width="0.5dp" />
+    <solid android:color="#000000" />
+    <stroke android:color="#000000" android:width="1dp" />
     <corners android:radius="7dp" />
 </shape>
