--- a/app/src/main/res/layout/company_row.xml
+++ b/app/src/main/res/layout/company_row.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
-android:background="@drawable/layout_background"
+android:background="@drawable/layout_background_2"
 android:orientation="vertical" >
 
 <TextView
@@ -11,7 +11,7 @@ android:orientation="vertical" >
     android:layout_height="50dp"
     android:layout_gravity="center|center_vertical|center_horizontal"
     android:gravity="center|center_vertical|center_horizontal"
-    android:textColor="@color/textColorPrimary"
+    android:textColor="@color/customColorPrimary"
     android:textSize="14sp"
     />
 
