--- a/app/src/main/res/layout/select_company_dialog.xml
+++ b/app/src/main/res/layout/select_company_dialog.xml
@@ -5,9 +5,9 @@
         android:id="@+id/popup"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#191A19"
+        android:background="#99000000"
         android:orientation="vertical"
-        tools:context=".CardRegisterActivity" ><!--해당 액티비티 선언-->
+        tools:context=".CarRegisterActivity" ><!--해당 액티비티 선언-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:background="#99000000"
             android:orientation="vertical">
 
             <TextView
@@ -28,9 +29,9 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="28dp"
                 android:gravity="center"
-                android:background="@drawable/layout_background"
+                android:background="@drawable/layout_background_1"
                 android:text="제조사"
-                android:textColor="#3E3E3E"
+                android:textColor="#FFFFFF"
                 android:textSize="16sp" />
 
             <GridView
