--- a/app/src/main/res/layout/activity_myinfo_recom.xml
+++ b/app/src/main/res/layout/activity_myinfo_recom.xml
@@ -86,13 +86,12 @@
 
                         <TextView
                             android:id="@+id/myinfo_user_title"
-                            android:fontFamily="@font/nanumsquarebold"
+                            android:fontFamily="@font/nanumsquareextrabold"
                             android:layout_width="29dp"
                             android:layout_height="26dp"
                             android:layout_gravity="center|center_horizontal|center_vertical"
                             android:letterSpacing="0.05"
                             android:text="01"
-                            android:textStyle="bold"
                             android:textColor="#ff4b5b"
                             android:textSize="20sp" />
                     </LinearLayout>
@@ -289,7 +288,7 @@
 
                         <TextView
                             android:id="@+id/myinfo_user_title821"
-                            android:fontFamily="@font/nanumsquarebold"
+                            android:fontFamily="@font/nanumsquareextrabold"
                             android:layout_width="29dp"
                             android:layout_height="26dp"
                             android:layout_marginTop="60dp"
@@ -297,8 +296,7 @@
                             android:letterSpacing="0.05"
                             android:text="02"
                             android:textColor="#ff4b5b"
-                            android:textSize="20sp"
-                            android:textStyle="bold"/>
+                            android:textSize="20sp"/>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -592,7 +590,7 @@
                 <LinearLayout
                     android:id="@+id/myinfo_linearLayout10"
                     android:layout_width="match_parent"
-                    android:layout_height="66dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:orientation="vertical"
                     tools:ignore="MissingConstraints">
@@ -606,7 +604,7 @@
                         <TextView
                             android:fontFamily="@font/nanumsquareregular"
                             android:layout_width="wrap_content"
-                            android:layout_height="66dp"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="left|center_horizontal|center_vertical"
                             android:gravity="left"
                             android:letterSpacing="0.05"
@@ -620,16 +618,14 @@
                 <LinearLayout
                     android:id="@+id/myinfo_linearLayout11"
                     android:layout_width="match_parent"
-                    android:layout_height="32dp"
-                    android:layout_marginTop="6dp"
-                    android:gravity="center"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="13dp"
                     android:orientation="horizontal"
                     tools:ignore="MissingConstraints">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_gravity="center|center_horizontal|center_vertical"
                         android:orientation="vertical">
 
                         <TextView
@@ -638,10 +634,12 @@
                             android:layout_width="wrap_content"
                             android:layout_height="26dp"
                             android:layout_gravity="left|center_horizontal|center_vertical"
+                            android:gravity="center|center_horizontal|center_vertical"
                             android:letterSpacing="0.05"
                             android:text="자세히 보기"
                             android:textColor="#ff4b5b"
-                            android:textSize="14sp" />
+                            android:textSize="14sp"
+                            android:textStyle="bold"/>
                     </LinearLayout>
                 </LinearLayout>
 
