--- a/app/src/main/res/menu/bottom_navi.xml
+++ b/app/src/main/res/menu/bottom_navi.xml
@@ -4,21 +4,21 @@
     <item
         android:id="@+id/bottom_home"
         android:enabled="true"
-        android:icon="@drawable/home"
+        android:icon="@drawable/home_bottomnavi"
         android:title="홈"
         app:showAsAction="always"/>
 
     <item
         android:id="@+id/bottom_use_history"
         android:enabled="true"
-        android:icon="@drawable/location"
+        android:icon="@drawable/transaction_bottomnavi"
         android:title="이용내역"
         app:showAsAction="always"/>
 
     <item
         android:id="@+id/bottom_myinfo"
         android:enabled="true"
-        android:icon="@drawable/user_1"
+        android:icon="@drawable/user_bottomnavi"
         android:title="내정보"
         app:showAsAction="always"/>
 
