--- a/app/src/main/res/layout/activity_my_profile_settings.xml
+++ b/app/src/main/res/layout/activity_my_profile_settings.xml
@@ -338,20 +338,20 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNav_set"
+        android:fontFamily="@font/nanumsquareregular"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:background="@drawable/default_background_type_3"
-        android:focusableInTouchMode="false"
         android:gravity="bottom"
+        app:layout_behavior="com.sincar.customer.common.BottomNavigationViewBehavior"
+        app:menu="@menu/bottom_navi"
+        tools:ignore="MissingConstraints"
+        app:layout_insetEdge="bottom"
+        android:background="@drawable/default_background_type_3"
         app:itemBackground="@color/base_background_color"
         app:itemIconTint="@drawable/bottom_section_color"
         app:itemTextColor="@color/default_text_color"
-        app:layout_behavior="com.sincar.customer.common.BottomNavigationViewBehavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_insetEdge="bottom"
-        app:menu="@menu/bottom_navi"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintRight_toRightOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
