--- a/app/src/main/res/layout/list_item_point_history.xml
+++ b/app/src/main/res/layout/list_item_point_history.xml
@@ -3,23 +3,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
+    android:gravity="center|center_vertical|center_horizontal"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="52dp"
-        android:gravity="center_vertical">
+        android:gravity="center|center_vertical|center_horizontal">
 
         <TextView
             android:id="@+id/column1"
             android:fontFamily="@font/nanumsquareregular"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center|center_vertical|center_horizontal"
+            android:gravity="center|center_vertical|center_horizontal"
             android:textColor="#3e3e3e"
             android:textSize="14sp"
             android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:text="@string/point_history_list_column_1"/>
         <TextView
             android:id="@+id/column2"
