--- a/app/src/main/res/drawable/bottom_section_color.xml
+++ b/app/src/main/res/drawable/bottom_section_color.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:color="#D81B60" />
+    <item android:state_checked="true" android:color="#ff4d4d" />
     <item android:color="#CFD8DC"  />
 </selector>
