--- a/app/src/main/res/layout/list_item_agent.xml
+++ b/app/src/main/res/layout/list_item_agent.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/agent_time_list_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:background="#ffffff"
+    android:layout_marginTop="20dp"
     android:orientation="horizontal">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -29,6 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/goto_map_icon"
+                app:srcCompat="@mipmap/ic_launcher_round"
                 android:contentDescription="@string/agent_photo_desc" />
         </LinearLayout>
 
