--- a/app/src/main/res/layout/select_car_dialog.xml
+++ b/app/src/main/res/layout/select_car_dialog.xml
@@ -41,6 +41,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_gravity="center|center_horizontal|center_vertical"
                 android:gravity="center|center_horizontal|center_vertical"
                 android:columnWidth="94dp"
