--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,7 +99,7 @@
                     app:srcCompat="@drawable/filled" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <!-- 스팀세차 버튼 -->
+            <!-- 출장스팀세차 버튼 -->
             <Button
                 android:id="@+id/btnMainMenu1"
                 android:fontFamily="@font/nanumsquareregular"
@@ -113,7 +113,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnCustomerPoint" />
 
-            <!-- 대리운 버튼 -->
+            <!-- 렌터카 버튼 -->
             <Button
                 android:id="@+id/btnMainMenu2"
                 android:fontFamily="@font/nanumsquareregular"
@@ -122,13 +122,13 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="24dp"
-                android:drawableTop="@drawable/main_drive_image"
+                android:drawableTop="@drawable/main_share_image"
                 android:text="@string/main_menu_2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btnMainMenu1"
                 app:layout_constraintTop_toBottomOf="@+id/btnCustomerPoint" />
 
-            <!-- 카페어링 버튼 -->
+            <!-- 승차공유 버튼 -->
             <Button
                 android:id="@+id/btnMainMenu3"
                 android:fontFamily="@font/nanumsquareregular"
@@ -136,13 +136,13 @@
                 android:layout_width="0dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="20dp"
-                android:drawableTop="@drawable/main_share_image"
+                android:drawableTop="@drawable/main_hailing_image"
                 android:text="@string/main_menu_3"
                 app:layout_constraintEnd_toStartOf="@+id/btnMainMenu4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnMainMenu1" />
 
-            <!-- 카쉐어링 버튼 -->
+            <!-- 대리운전 버튼 -->
             <Button
                 android:id="@+id/btnMainMenu4"
                 android:fontFamily="@font/nanumsquareregular"
@@ -151,7 +151,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="24dp"
-                android:drawableTop="@drawable/main_car_image"
+                android:drawableTop="@drawable/main_drive_image"
                 android:text="@string/main_menu_4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btnMainMenu3"
@@ -171,7 +171,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnMainMenu3" />
 
-            <!-- 배달라이더 버튼 -->
+            <!-- 차량공유 버튼 -->
             <Button
                 android:id="@+id/btnMainMenu6"
                 android:fontFamily="@font/nanumsquareregular"
@@ -180,7 +180,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="24dp"
-                android:drawableTop="@drawable/main_rider_image"
+                android:drawableTop="@drawable/main_car_image"
                 android:text="@string/main_menu_6"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btnMainMenu5"
